[gd_scene load_steps=3 format=3 uid="uid://yfhqf7xrcsnx"]

[ext_resource type="Script" uid="uid://ctcu4vr2xp58p" path="res://scripts/components/clip_item.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.18, 0.18, 0.18, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ClipItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 85)
offset_right = 240.0
offset_bottom = 85.0
theme_override_styles/panel = SubResource("StyleBoxFlat_normal")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
placeholder_text = "Clip Name"
flat = true

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LoopCheck" type="CheckBox" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.298, 0.62, 1, 1)
theme_override_colors/font_pressed_color = Color(0.298, 0.62, 1, 1)
button_pressed = true
text = "Loop"

[node name="SpeedContainer" type="HBoxContainer" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBox/HBox/SpeedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "x"
vertical_alignment = 1

[node name="SpeedSpinBox" type="SpinBox" parent="MarginContainer/VBox/HBox/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
alignment = 1